--- a/wpa_supplicant/android.config
+++ b/wpa_supplicant/android.config
@@ -493,8 +493,14 @@ CONFIG_INTERWORKING=y
 CONFIG_HS20=y
 
 # Disable roaming in wpa_supplicant
-CONFIG_NO_ROAMING=y
+#CONFIG_NO_ROAMING=y
 
 # Enable P2P
 CONFIG_P2P=y
 CONFIG_AP=y
+
+# bgscan
+NEED_BGSCAN=y
+CONFIG_BGSCAN_LEARN=y
+CONFIG_BGSCAN_SIMPLE=y
+
